syntax = "proto3";

package netsvr.uniqIdListResp;

option go_package = "pkg/protocol;protocol";

//worker响应business，返回网关中全部的uniqId
message UniqIdListResp {
  //worker原样回传给business
  bytes ctxData = 1;
  //网关包含的uniqId
  repeated string uniqIds = 2;
}